[tool.poetry]
name = "pybuildmuscle"
version = "0.1.0"
description = "Aplicativo mobile voltado para o mundo fitness, treinos de musculacao ou treinos diversos"
authors = ["Vitor Esteves <vesteves33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
kivy = "^2.3.1"

[tool.poetry.group.dev.dependencies]
buildozer = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
